--- a/Concurrency/README
+++ b/Concurrency/README
@@ -1,3 +1,5 @@
+Concurrency/src/epam/task
+
 Напишите программу моделирования с использованием на языке Java по одному из приведенных ниже вариантов.
 В программах класс CPUQueue описывает очередь, класс CPUProcess моделирует поток процессов, 
 а класс CPU – поток обслуживания процесса центральным процессором. Очереди, потоки процессов 
